seoul/2nd/CICD/k8s_file/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-app
  namespace: gacns
spec:
  selector:
    app: fastapi-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
